cmake_minimum_required(VERSION 3.16)
project(demo)

set(CMAKE_CXX_STANDARD 11)

add_executable(demo main.cpp)


FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(demo ${OpenCV_LIBS})
#IF (OpenCV_FOUND)
#    INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
#    TARGET_LINK_LIBRARIES(demo ${OpenCV_LIBS})
#ELSE(OPENCV_FOUND)
#    MESSAGE(FATAL_ERROR "OPENCV Library not found!")
#ENDIF(OPENCV_FOUND)